# palmr-demo-manager

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  middleware.yml  traefik-dynamic-config.yml
src/: main.rs  utils.rs
