[package]
name = "palmr-demo-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bollard = "0.16"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.31"
